syntax = "proto3";

message HelloResponse {
    string message = 1;
}

message HelloRequest {
    string name = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}